# Soc-Analyst

./: .gitignore  CONTRIBUTING.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  valid.txt
scenarios/: apt.py  malware.py
server/: Dockerfile  __init__.py  app.py  requirements.txt
soc_analyst_env/: __init__.py  inference.py
soc_analyst_env/scenarios/: __init__.py  phishing.py
soc_analyst_env/server/: soc_analyst_env_environment.py
